# formate-trailing-commas

./: .bumpversion.cfg  .pre-commit-config.yaml  LICENSE  README.rst  formate.toml  plugins.md  pyproject.toml  repo_helper.yml  requirements.txt  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: octocheese.yml  python_ci_linux.yml
formate_trailing_commas/: __init__.py
formate_trailing_commas/_vendor/: add_trailing_comma.pyi  bin.pyi  requirements.txt
formate_trailing_commas/_vendor/add_trailing_comma/: __main__.py  _ast_helpers.py  _data.py  _main.py
formate_trailing_commas/_vendor/add_trailing_comma/_plugins/: _with.py  calls.py  classes.py  functions.py  imports.py  literals.py  match.py
tests/: requirements.txt  test_fstring_brackets.py
tests/upstream_tests/: align_braces_test.py  calls_test.py  classes_test.py  functions_test.py  imports_test.py  literals_test.py  match_test.py  remove_commas_test.py  unhug_test.py  with_test.py
