[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "formate-trailing-commas"
version = "0.1.0"
description = "Formate plugin to add trailing commas."
readme = "README.rst"
keywords = [ "commas", "formate", "formatting", "linting",]
dynamic = [ "requires-python", "classifiers", "dependencies",]

[project.license]
file = "LICENSE"

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"

[project.urls]
Homepage = "https://github.com/python-formate/formate-trailing-commas"
"Issue Tracker" = "https://github.com/python-formate/formate-trailing-commas/issues"
"Source Code" = "https://github.com/python-formate/formate-trailing-commas"

[project.entry-points.formate_hooks]
trailing-commas = "formate_trailing_commas:trailing_commas_hook"

[tool.whey]
base-classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Typing :: Typed",
]
python-versions = [ "3.7", "3.8", "3.9", "3.10", "3.11", "3.12", "3.13",]
python-implementations = [ "CPython",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
package = "formate_trailing_commas"
additional-files = [ "recursive-include formate_trailing_commas/_vendor *",]

[tool.mypy]
python_version = "3.9"
namespace_packages = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
plugins = [ "attr_utils.mypy_plugin",]
show_error_codes = true
exclude = "tests/data"

[[tool.mypy.overrides]]
module = "formate_trailing_commas._vendor.*"
ignore_errors = true

[tool.snippet-fmt]
directives = [ "code-block",]

[tool.snippet-fmt.languages.python]
reformat = true

[tool.snippet-fmt.languages.TOML]
reformat = true

[tool.snippet-fmt.languages.ini]

[tool.snippet-fmt.languages.json]

[tool.dependency-dash."requirements.txt"]
order = 10

[tool.dependency-dash."tests/requirements.txt"]
order = 20
include = false

[tool.importcheck]
always = [ "formate_trailing_commas",]

[tool.vendoring]
destination = "formate_trailing_commas/_vendor/"
requirements = "formate_trailing_commas/_vendor/requirements.txt"
patches-dir = "patches"
namespace = "formate_trailing_commas._vendor"
protected-files = [ "__init__.py", "README.rst", "requirements.txt",]

[tool.dep_checker]
allowed_unused = [ "formate",]
